--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "1.10.0",
     "multer": "^1.4.3",
     "nanoid": "^3.1.30",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
